--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,12 +1,19 @@
 {{ define "main" }}
   <p>
-    "Ei saa aru" (või eisaaru, kui tühikuklahv ei tööta) on eestikeelne
-    podcast. Juttu on tehnoloogiast ja inimeseks olemisest. Alati väga
-    põnevatest ja paeluvatest teemadest.
+    "Ei saa aru" (või eisaaru, kui tühikuklahv ei tööta) on podcast
+    tehnoloogiast ja inimeseks olemisest. Jutuks tulevad ainult väga paeluvad
+    ja põnevad teemad.
   </p>
   <p>
-    Lisa meid oma podcasti äpis: <a href="index.xml">RSS</a> ehk <span class="pre">{{ .Site.BaseURL }}/index.xml</span>.
-    Igaks juhuks võid eelnevalt varasemate osade kokkuvõtetega ka tutvuda:
+    Lisa meid oma podcasti äpis:<br>
+    <ul>
+      <li><span><a href="https://itunes.apple.com/us/podcast/ei-saa-aru/id1424289028?mt=2" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-gb/podcast-lrg.svg) no-repeat;width:133px;height:34px;background-size:contain;"></a></span>
+      <li><a href='https://playmusic.app.goo.gl/?ibi=com.google.PlayMusic&amp;isi=691797987&amp;ius=googleplaymusic&amp;apn=com.google.android.music&amp;link=https://play.google.com/music/m/I55lstokjlaw37c2thqcd4ewaju?t%3DEi_saa_aru%26pcampaignid%3DMKT-na-all-co-pr-mu-pod-16' rel='nofollow'><img width='125px' alt='Listen on Google Play Music' src='https://play.google.com/intl/en_us/badges-music/images/badges/en_badge_web_music.png'/></a>
+      <li>Või lisa otse <a href="index.xml">RSS</a> ehk <span class="pre">{{ .Site.BaseURL }}/index.xml</span>.
+    </ul>
+  <p>
+  </p>
+    Senised osad:
   </p>
   {{ range .Site.Pages }}
     {{ if .Params.Audio }}
