--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,7 @@
 {{ define "main" }}
   <p>
-    "Ei saa aru" (või eisaaru, kui tühikuklahv ei tööta) on podcast
-    tehnoloogiast ja inimeseks olemisest. Jutuks tulevad ainult väga paeluvad
-    ja põnevad teemad.
+    "Ei saa aru" on podcast tehnoloogiast ja inimeseks olemisest. Jutuks
+    tulevad ainult väga paeluvad ja põnevad teemad.
   </p>
   <p>
     Lisa meid oma podcasti äpis:<br>
