--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,2 +1,10 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/styles.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125872222-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-125872222-1');
+</script>
