--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
 <div id="header">
-  <h1>{{ .Site.Title }}</h1>
+  <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
   <p>{{ .Site.Params.Description }}</p>
 </div>
