--- a/static/styles.css
+++ b/static/styles.css
@@ -19,6 +19,21 @@ div#header {
   margin-left: 1em;
 }
 
+#header a {
+  text-decoration: none;
+  color: #fff;
+}
+
+#header a:hover {
+  text-decoration: none;
+  color: #fff;
+}
+
+#header a:visited {
+  text-decoration: none;
+  color: #fff;
+}
+
 ul li .banner {
   display: inline-block;  
   vertical-align: middle; 
