--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-  kontakt: {{ .Site.Params.Email }}
+  email: {{ .Site.Params.Email }} fb: <a href="https://www.facebook.com/eisaaaru">fb.com/eisaaaru</a>
 </div>
