ep49, some layout tweaks, separate staging

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,8 @@
   <p>
     "Ei saa aru" on podcast inimeseks olemisest ja tehnoloogiast. Proovime koos
     aru saada, kuidas toimivad inimsuhted, kosmosetehnika, muusika, teadvus,
-    jalgrattad, jne.
+    jalgrattad, emotsioonid, ühiskond, tehisintellekt, laste kasvatamine,
+    krüptoraha, jne.
   </p>
   <p>
     Lisa meid oma podcasti äpis:<br>
