dark style support

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,3 +9,5 @@
   gtag('config', 'UA-125872222-1');
 </script>
 <title>{{ .Site.Title }}</title>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
