--- a/static/styles.css
+++ b/static/styles.css
@@ -1,38 +1,44 @@
-body {
-  padding: 0px;
-  margin: 0px;
-  background-color: #fff;
+:root {
+  // DRAFT: https://www.w3.org/TR/css-color-adjust-1/
+  color-scheme: light dark;
+  --titlebar-color: #82afff;
+  --episode-title-color: #fff;
+  --link-color: #46acff;
+  --link-visited-color: #f679f6;
+}
 
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif; 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --titlebar-color: #252525;
+    --episode-title-color: #fff;
+    --link-color: #3bf4fb;
+    --link-visited-color: #ffb7ff;
+  }
+}
+
+body {
+  padding-top: 20px;
+  max-width: 820px;
+  margin: 0 auto;
+  padding: 1em;
+  font-family: 'Roboto', sans-serif;
 }
 
 div#header {
   padding: 1em;
   padding-left: calc((100% - max(min(80%, 25cm), 10cm)) / 2);
-  background-color: #48f;
-  border: 2px;
-  border-style: solid;
-  border-color: #fff;
+  background-color: var(--titlebar-color);
   color: #fff;
 }
 
 #header p {
-  margin-left: 1em;
+  margin-left: .5em;
 }
 
 #header a {
   text-decoration: none;
   color: #fff;
-}
-
-#header a:hover {
-  text-decoration: none;
-  color: #fff;
-}
-
-#header a:visited {
-  text-decoration: none;
-  color: #fff;
+  font-size: 1.4em;
 }
 
 ul li .banner {
@@ -53,11 +59,21 @@ div#content {
   left: calc((100% - max(min(80%, 25cm), 5cm)) / 2);
 }
 
+
 div.episode-title {
-  background-color: #acf;
+  background-color: var(--titlebar-color);
+  color: var(--episode-title-color);
   padding: 0.5em;
   margin: 0.2em;
+  font-size: 1.5em;
+  font-weight: bold;
+  text-align: center;
 }
+
+div.episode-title a {
+  color: #fff;
+}
+
 
 div.player {
   margin: 0.5em;
@@ -68,10 +84,19 @@ div.episode-content {
   margin-left: 1em;
 }
 
+.episode-content a:link {
+   color: var(--link-color)
+}
+
+.episode-content a:visited {
+    color: var(--link-visited-color)
+}
+
+
 div#footer {
   padding: 0.25em;
   padding-left: calc((100% - max(min(80%, 25cm), 10cm)) / 2);
-  background-color: #48f;
+  background-color: var(--titlebar-color);
   border: 2px;
   border-style: solid;
   border-color: #fff;
